--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -26,6 +26,9 @@ jobs:
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Build with Maven
+      run: mvn -B package --file pom.xml
+      
+    - name: Maven clean install
       run: mvn clean install
 
     #- name: Publish to GitHub Packages Apache Maven
