--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,17 +1,16 @@
 # This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven
+name: build
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  build:
 
-    runs-on: ubuntu-latest
-
+  setup:
+    runs-on: ubuntu-latest   
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 17
@@ -20,7 +19,11 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Maven clean install
-      run: mvn clean install
-    - name: Maven test
-      run: mvn test
+        
+  package:
+    needs: [setup]
+    runs-on: ubuntu-latest
+    steps:
+      - name: compile
+        run: mvn clean install
+
