--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,15 +10,20 @@ on:
 jobs:
 
   setup:
-    runs-on: ubuntu-latest   
+    runs-on: self-hosted  
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: maven
+        
+  package:
+    needs: [setup]
+    runs-on: self-hosted
+    steps:
     - name: compile
       run: mvn clean install
       
