--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,7 +10,7 @@ on:
 jobs:
 
   setup:
-    runs-on: self-hosted  
+    runs-on: ubuntu-latest  
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -22,7 +22,7 @@ jobs:
         
   package:
     needs: [setup]
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
     - name: compile
       run: mvn clean install
