--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: build
+name: setup/package
 
 on:
   push:
@@ -19,12 +19,8 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        
-  package:
-    needs: [setup]
-    runs-on: ubuntu-latest
-    steps:
     - name: compile
       run: mvn clean install
+   
       
 
