--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,14 +7,17 @@ on:
 jobs:
 
   setup:
-    runs-on: ubuntu-latest  
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [ '16', '17', '18']
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Set up JDK 17
+    - name: compile - Java:: ${{ matrix.java }}
       uses: actions/setup-java@v2
       with:
-        java-version: '17'
+        java-version: ${{ matrix.java }}
         distribution: 'temurin'
     - name: compile
       run: mvn clean install
