--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
     </dependencies>
 
     <build>
-        <finalName>Autohaus</finalName>
+        <finalName>AutoHaus</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
