--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '16', '17', '18']
+        java: [ '17', '18']
     steps:
     - name: Checkout
       uses: actions/checkout@v2
