--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,18 +6,39 @@ on:
 
 jobs:
 
+  welcome:
+    runs-on: self-hosted
+    steps:
+      - run: echo "🐧 This job is now running on a ${{ runner.os }}"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}.""
+      
   setup:
+    needs: [welcome]
     runs-on: self-hosted
     strategy:
       matrix:
         java: [ '17', '18']
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: compile - Java ${{ matrix.java }}
-      uses: actions/setup-java@v2
-      with:
-        java-version: ${{ matrix.java }}
-        distribution: 'temurin'
-    - name: compile
-      run: mvn clean install
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner. "
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      - name: Set up JDK 17 and 18
+        uses: actions/setup-java@v2
+        with:
+          java-version: ${{ matrix.java }}
+          distribution: 'temurin'
+      - run: echo "🍏 This job's status is ${{ job.status }}." 
+      
+  package:
+    needs: [setup]
+    runs-on: self-hosted
+    steps:
+      - name: compile
+        run: |
+          echo "cleaning up old compilation files, then compiling, testing and packaging, "  |
+          mvn clean install  
+
+
