--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,6 @@ jobs:
   setup:
     needs: [welcome]
     runs-on: self-hosted
-    strategy:
-      matrix:
-        java: [ '17', '18']
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
@@ -25,10 +22,10 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
-      - name: Set up JDK 17 and 18
+      - name: Set up JDK 17 
         uses: actions/setup-java@v2
         with:
-          java-version: ${{ matrix.java }}
+          java-version: 17
           distribution: 'temurin'
       - run: echo "🍏 This job's status is ${{ job.status }}." 
       
